Optionally force scene switch transitions for all video sources.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -58277,6 +58277,9 @@
         }
       }
     },
+    "Force scene switch transition" : {
+
+    },
     "Foreground" : {
       "localizations" : {
         "de" : {
@@ -100417,6 +100420,9 @@
           }
         }
       }
+    },
+    "RTMP, SRT(LA), screen capture and media player video sources can instantly be switched to, but if you want consistency you can force scene switch transitions to these as well." : {
+
     },
     "rtmp://a.rtmp.youtube.com/live2" : {
       "localizations" : {
