OBS crash when adaptive resolution.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -137733,6 +137733,9 @@
         }
       }
     },
+    "Warning: OBS typically requires hardware decoding not to crash." : {
+
+    },
     "Watch" : {
       "localizations" : {
         "de" : {
