OBS crash when adaptive resolution.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -137733,7 +137733,7 @@
         }
       }
     },
-    "Warning: OBS typically requires hardware decoding not to crash." : {
+    "Warning: OBS typically requires hardware decoding not to crash when enabled." : {
 
     },
     "Watch" : {
