--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -124689,6 +124689,9 @@
         }
       }
     },
+    "The UDP port %u will also be used." : {
+
+    },
     "The UDP port the SRT(LA) server listens for SRT publishers on." : {
       "localizations" : {
         "de" : {
