Use best snapshot.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -91384,6 +91384,7 @@
       }
     },
     "Pretty snapshot" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
